--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,9 +43,7 @@ h2, h3{
 .section-title h2 {
   text-shadow: 1px 1px 2px #4444;
 }
-/*****************************
-    Hero
-******************************/
+/*----- Hero -----*/
 .jumbotron {
   background-size: 100% 100%;
   width: 100%;
@@ -76,14 +74,18 @@ h2, h3{
   font-weight: bold;
 }
 
+@media (max-width: 1000px) {
+  .title-hero{
+    width: 80%;
+    font-size: 60px;
+  }
+}
+
 /*****************************
 
 
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
 
-
+/*----- About -----*/
 .about .content {
   padding: 0 80px;
 }
@@ -105,112 +107,10 @@ h2, h3{
   color: #848484;
 }
 
-.about .content ul {
-  list-style: none;
-  padding: 0;
-}
-
-.about .content ul li + li {
-  margin-top: 15px;
-}
-
-.about .content ul li {
-  position: relative;
-  padding-left: 26px;
-}
-
-.about .content ul i {
-  font-size: 20px;
-  color: #ffb03b;
-  position: absolute;
-  left: 0;
-  top: 2px;
-}
-
 .about .content p:last-child {
   margin-bottom: 0;
 }
 
-.about .video-box {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 400px;
-  position: relative;
-}
-
-.about .play-btn {
-  width: 94px;
-  height: 94px;
-  background: radial-gradient(#ffb03b 50%, rgba(255, 176, 59, 0.4) 52%);
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  left: calc(50% - 47px);
-  top: calc(50% - 47px);
-  overflow: hidden;
-}
-
-.about .play-btn::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 100;
-  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.about .play-btn::before {
-  content: '';
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation: pulsate-btn 2s;
-  animation: pulsate-btn 2s;
-  -webkit-animation-direction: forwards;
-  animation-direction: forwards;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: steps;
-  animation-timing-function: steps;
-  opacity: 1;
-  border-radius: 50%;
-  border: 5px solid rgba(255, 176, 59, 0.7);
-  top: -15%;
-  left: -15%;
-  background: rgba(198, 16, 0, 0);
-}
-
-.about .play-btn:hover::after {
-  border-left: 15px solid #ffb03b;
-  transform: scale(20);
-}
-
-.about .play-btn:hover::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border: none;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 200;
-  -webkit-animation: none;
-  animation: none;
-  border-radius: 0;
-}
 
 @media (max-width: 1024px) {
   .about .content, .about .accordion-list {
@@ -228,30 +128,7 @@ h2, h3{
   }
 }
 
-@-webkit-keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-@keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-
-
+/*----- Courses -----*/
 .course .box {
   padding: 10px 10px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
